// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ServiceProvidersPageNoticeComponent should match snapshot when has items 1`] = `
<div>
  <div
    data-mockid="CalloutComponent"
  >
    <div>
      CalloutComponent
    </div>
    <div>
      <div>
        <p>
          CorePartners.serviceProvidersPage.noticeSubtitle
        </p>
        <ul>
          <li>
            CorePartners.serviceProvidersPage.noticeBullet1
          </li>
          <li>
            CorePartners.serviceProvidersPage.noticeBullet2
          </li>
          <li>
            CorePartners.serviceProvidersPage.noticeBullet3
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ServiceProvidersPageNoticeComponent should match snapshot when has no items 1`] = `
<div>
  <div
    data-mockid="AlertComponent"
  >
    <div>
      AlertComponent
    </div>
    <div>
      <div>
        <p>
          CorePartners.serviceProvidersPage.noticeSubtitle
        </p>
        <ul>
          <li>
            CorePartners.serviceProvidersPage.noticeBullet1
          </li>
          <li>
            CorePartners.serviceProvidersPage.noticeBullet2
          </li>
          <li>
            CorePartners.serviceProvidersPage.noticeBullet3
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
